kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-frontend-ingress
  namespace: lugx-gaming
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lugx-gaming.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lugx-frontend-service
            port:
              number: 80
